--- a/accounts.html
+++ b/accounts.html
@@ -1,220 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Accounts - VOID</title>
+  <meta charset="UTF-8">
+  <title>VOID | Account</title>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
   <style>
     body {
-      background: black;
+      background-color: black;
       color: white;
-      font-family: monospace;
-      margin: 0;
-      padding: 20px;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 40px;
     }
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-      position: relative;
+    .container {
+      max-width: 400px;
+      margin: 0 auto;
     }
-    #navToggle {
-      cursor: pointer;
-      font-size: 32px;
-      margin-right: 20px;
-    }
-    nav {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      top: 80px;
-      left: 20px;
-      background: #111;
-      border: 1px solid #444;
-      padding: 10px;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 5px 0;
-    }
-    input, button, textarea {
-      background: #111;
-      color: white;
-      border: 1px solid #444;
-      margin: 5px 0;
-      padding: 8px;
+    input, button {
       width: 100%;
-      max-width: 300px;
+      padding: 10px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 4px;
     }
-    #profile-section, #edit-section {
-      margin-top: 20px;
+    input {
+      background-color: #222;
+      color: white;
     }
-    #profile-pic {
-      width: 100px;
-      height: 100px;
-      object-fit: cover;
-      border: 1px solid #666;
-      margin-bottom: 10px;
+    button {
+      background-color: #444;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #666;
+    }
+    .toggle-link {
+      color: #888;
+      cursor: pointer;
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <header>
-    <div id="navToggle">∞</div>
-    <h1>VOID</h1>
-    <nav id="mainNav">
-      <a href="index.html">Enter the Abyss</a>
-      <a href="echoes.html">Echoes</a>
-      <a href="accounts.html">Accounts</a>
-    </nav>
-  </header>
-
-  <div id="auth-section">
-    <h2>Register</h2>
-    <input type="text" id="reg-username" placeholder="Username (min 6 chars)" />
-    <input type="email" id="reg-email" placeholder="Email" />
-    <input type="password" id="reg-password" placeholder="Password (min 8 chars)" />
-    <button onclick="register()">Register</button>
-
-    <h2>Login</h2>
-    <input type="email" id="login-email" placeholder="Email" />
-    <input type="password" id="login-password" placeholder="Password" />
-    <button onclick="login()">Login</button>
+  <div class="container">
+    <h2 id="form-title">Login to VOID</h2>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button id="auth-button">Login</button>
+    <p><span class="toggle-link" onclick="toggleMode()">Don't have an account? Sign up</span></p>
+    <p id="error-msg" style="color:red;"></p>
   </div>
 
-  <div id="profile-section" style="display:none;">
-    <h2>Your Profile</h2>
-    <img id="profile-pic" src="" alt="Profile Picture" />
-    <p><strong>Username:</strong> <span id="profile-username"></span></p>
-    <p><strong>Bio:</strong> <span id="profile-bio"></span></p>
-    <p><strong>Age:</strong> <span id="profile-age"></span></p>
-    <p><strong>Gender:</strong> <span id="profile-gender"></span></p>
-    <button onclick="showEdit()">Edit Profile</button>
-    <button onclick="logout()">Logout</button>
-  </div>
-
-  <div id="edit-section" style="display:none;">
-    <h2>Edit Profile</h2>
-    <input type="text" id="edit-bio" placeholder="Bio" />
-    <input type="number" id="edit-age" placeholder="Age" />
-    <input type="text" id="edit-gender" placeholder="Gender" />
-    <input type="file" id="edit-pfp" />
-    <button onclick="saveProfile()">Save Changes</button>
-    <button onclick="hideEdit()">Cancel</button>
-  </div>
-
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-storage-compat.js"></script>
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyDfQbZfDE7a9ZyZik4Mp0VDmG9E0BJpFOw",
+      apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
       authDomain: "void-d9ec4.firebaseapp.com",
       databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
       storageBucket: "void-d9ec4.appspot.com",
       messagingSenderId: "267268035851",
-      appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
+      appId: "1:267268035851:web:d535fe4175c06f170f3e0e",
+      measurementId: "G-78DGNW8HV3"
     };
+
     firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.database();
-    const storage = firebase.storage();
 
-    const navToggle = document.getElementById("navToggle");
-    navToggle.onclick = () => {
-      const nav = document.getElementById("mainNav");
-      nav.style.display = nav.style.display === "flex" ? "none" : "flex";
-    };
+    let isLogin = true;
 
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        document.getElementById("auth-section").style.display = "none";
-        document.getElementById("profile-section").style.display = "block";
-        loadProfile(user.uid);
-      }
-    });
+    function toggleMode() {
+      isLogin = !isLogin;
+      document.getElementById('form-title').innerText = isLogin ? "Login to VOID" : "Sign Up for VOID";
+      document.getElementById('auth-button').innerText = isLogin ? "Login" : "Sign Up";
+      document.querySelector('.toggle-link').innerText = isLogin ? "Don't have an account? Sign up" : "Already have an account? Login";
+      document.getElementById('error-msg').innerText = "";
+    }
 
-    function register() {
-      const email = document.getElementById("reg-email").value;
-      const password = document.getElementById("reg-password").value;
-      const username = document.getElementById("reg-username").value;
-      if (password.length < 8 || username.length < 6) {
-        alert("Password must be 8+ chars, username 6+ chars.");
+    document.getElementById('auth-button').addEventListener('click', () => {
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value.trim();
+      const errorMsg = document.getElementById('error-msg');
+      errorMsg.innerText = "";
+
+      if (!email || !password) {
+        errorMsg.innerText = "Please fill in both fields.";
         return;
       }
-      auth.createUserWithEmailAndPassword(email, password)
-        .then(cred => {
-          return db.ref("users/" + cred.user.uid).set({
-            username: username,
-            bio: "",
-            age: "",
-            gender: "",
-            profilePic: ""
-          });
-        })
-        .catch(e => alert(e.message));
-    }
 
-    function login() {
-      const email = document.getElementById("login-email").value;
-      const password = document.getElementById("login-password").value;
-      auth.signInWithEmailAndPassword(email, password)
-        .catch(e => alert(e.message));
-    }
-
-    function logout() {
-      auth.signOut().then(() => location.reload());
-    }
-
-    function loadProfile(uid) {
-      db.ref("users/" + uid).once("value").then(snapshot => {
-        const data = snapshot.val();
-        document.getElementById("profile-username").innerText = data.username;
-        document.getElementById("profile-bio").innerText = data.bio;
-        document.getElementById("profile-age").innerText = data.age;
-        document.getElementById("profile-gender").innerText = data.gender;
-        document.getElementById("profile-pic").src = data.profilePic || "https://via.placeholder.com/100";
-        document.getElementById("edit-bio").value = data.bio;
-        document.getElementById("edit-age").value = data.age;
-        document.getElementById("edit-gender").value = data.gender;
-      });
-    }
-
-    function showEdit() {
-      document.getElementById("edit-section").style.display = "block";
-    }
-
-    function hideEdit() {
-      document.getElementById("edit-section").style.display = "none";
-    }
-
-    function saveProfile() {
-      const user = auth.currentUser;
-      if (!user) return;
-      const bio = document.getElementById("edit-bio").value;
-      const age = document.getElementById("edit-age").value;
-      const gender = document.getElementById("edit-gender").value;
-      const file = document.getElementById("edit-pfp").files[0];
-
-      const updates = { bio, age, gender };
-
-      if (file) {
-        const storageRef = storage.ref("pfp/" + user.uid);
-        storageRef.put(file).then(() => {
-          storageRef.getDownloadURL().then(url => {
-            updates.profilePic = url;
-            db.ref("users/" + user.uid).update(updates).then(() => location.reload());
-          });
-        });
+      if (isLogin) {
+        firebase.auth().signInWithEmailAndPassword(email, password)
+          .then(() => window.location.href = "index.html")
+          .catch(error => errorMsg.innerText = error.message);
       } else {
-        db.ref("users/" + user.uid).update(updates).then(() => location.reload());
+        if (password.length < 8) {
+          errorMsg.innerText = "Password must be at least 8 characters.";
+          return;
+        }
+        firebase.auth().createUserWithEmailAndPassword(email, password)
+          .then(() => window.location.href = "index.html")
+          .catch(error => errorMsg.innerText = error.message);
       }
-    }
+    });
   </script>
 </body>
 </html>
